--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -461,17 +461,22 @@ date.time: H:i:s
 
 # settings.html.twig
 "settings_1": "Settings form"
-"settings_2": "Email admin"
-"settings_3": "Template"
-"settings_4": "Active"
-"settings_5": "Roles"
-"settings_6": "Https"
-"settings_7": "Registration user confirm admin"
-"settings_8": "PayPal sandbox"
-"settings_9": "PayPal business"
-"settings_10": "PayPal currency code"
-"settings_11": "PayPal credit amount"
-"settings_12": "Credits"
+"settings_2": "Style"
+"settings_3": "Email admin"
+"settings_4": "Template"
+"settings_17": "Language"
+"settings_5": "Security"
+"settings_6": "Active"
+"settings_7": "Roles"
+"settings_8": "Https"
+"settings_9": "Registration user confirm admin"
+"settings_10": "Paypal"
+"settings_11": "PayPal sandbox"
+"settings_12": "PayPal business"
+"settings_13": "PayPal currency code"
+"settings_14": "PayPal credit amount"
+"settings_15": "Payment"
+"settings_16": "Credits"
 
 # user_creation.html.twig
 "user_creation_1": "User creation form"
