--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -41,15 +41,15 @@ date.time: H:i:s
 # Controller / Control panel
 
 # ModuleController.php
-"moduleController_1": "Modules sort complete, please reload the page."
+"moduleController_1": "Modules sort complete."
 "moduleController_2": "Modules not sorted!"
-"moduleController_3": "Module create completed, please reload the page."
+"moduleController_3": "Module create completed."
 "moduleController_4": "Module not created!"
 "moduleController_5": "Module not selected!"
-"moduleController_6": "Module update completed, please reload the page."
+"moduleController_6": "Module update completed."
 "moduleController_7": "Module update not completed!"
 "moduleController_8": "Module profile sort problem!"
-"moduleController_9": "Module deletion completed, please reload the page."
+"moduleController_9": "Module deletion completed."
 "moduleController_10": "All modules deletion completed."
 "moduleController_11": "Module not deleted!"
 "moduleController_12": "No"
@@ -96,8 +96,12 @@ date.time: H:i:s
 "roleController_8": "Role not deleted!"
 
 # SettingController.php
-"settingController_1": "Settings update complete, please reload the page."
+"settingController_1": "Settings update complete."
 "settingController_2": "Settings not saved!"
+"settingController_3": "Language deletion completed."
+"settingController_4": "Language not deleted!"
+"settingController_5": "Language creation completed."
+"settingController_6": "Language not created!"
 
 # UserController.php
 "userController_1": "User creation completed."
@@ -236,8 +240,8 @@ date.time: H:i:s
 "index_5": "Abort"
 "index_6": "Connection error, please reload the page."
 "index_7": "There is a background process that has not completed. Reloading might result in data loss."
-"index_8": "Change page language without save data?"
-"index_9": "After this change, for secure reason, you must login again."
+"index_8": "After this change, for secure reason, you must login again."
+"index_9": "Change page language without save data?"
 "index_10": "Really delete this payment?"
 "index_11": "Really delete all payments?"
 "index_12": "Really delete this page?"
@@ -248,6 +252,7 @@ date.time: H:i:s
 "index_17": "Really delete all modules?"
 "index_18": "Really delete this role?"
 "index_19": "Really delete all roles?"
+"index_20": "Really delete this language?"
 
 # recover_password.html.twig
 "recover_password_1": "Recover password form"
@@ -464,19 +469,20 @@ date.time: H:i:s
 "settings_2": "Style"
 "settings_3": "Email admin"
 "settings_4": "Template"
-"settings_17": "Language"
-"settings_5": "Security"
-"settings_6": "Active"
-"settings_7": "Roles"
-"settings_8": "Https"
-"settings_9": "Registration user confirm admin"
-"settings_10": "Paypal"
-"settings_11": "PayPal sandbox"
-"settings_12": "PayPal business"
-"settings_13": "PayPal currency code"
-"settings_14": "PayPal credit amount"
-"settings_15": "Payment"
-"settings_16": "Credits"
+"settings_5": "Language"
+"settings_6": "Language manage"
+"settings_7": "Security"
+"settings_8": "Active"
+"settings_9": "Roles"
+"settings_10": "Https"
+"settings_11": "Registration user confirm admin"
+"settings_12": "Paypal"
+"settings_13": "PayPal sandbox"
+"settings_14": "PayPal business"
+"settings_15": "PayPal currency code"
+"settings_16": "PayPal credit amount"
+"settings_17": "Payment"
+"settings_18": "Credits"
 
 # user_creation.html.twig
 "user_creation_1": "User creation form"
