--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -483,7 +483,7 @@ date.time: H:i:s
 "settings_6": "Language manage"
 "settings_7": "Security"
 "settings_8": "Active"
-"settings_9": "Roles"
+"settings_9": "Maintenance roles"
 "settings_10": "Https"
 "settings_11": "Registration user confirm admin"
 "settings_12": "Login attempt time"
