Code - Work in progress

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -488,13 +488,14 @@ date.time: H:i:s
 "settings_11": "Registration user confirm admin"
 "settings_12": "Login attempt time"
 "settings_13": "Login attempt count"
-"settings_14": "Paypal"
-"settings_15": "PayPal sandbox"
-"settings_16": "PayPal business"
-"settings_17": "PayPal currency code"
-"settings_18": "PayPal credit amount"
-"settings_19": "Payment"
-"settings_20": "Credits"
+"settings_14": "Captcha"
+"settings_15": "Paypal"
+"settings_16": "PayPal sandbox"
+"settings_17": "PayPal business"
+"settings_18": "PayPal currency code"
+"settings_19": "PayPal credit amount"
+"settings_20": "Payment"
+"settings_21": "Credits"
 
 # user_creation.html.twig
 "user_creation_1": "User creation form"
