--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -102,9 +102,8 @@ date.time: H:i:s
 "settingController_1": "Settings update complete."
 "settingController_2": "Settings not saved!"
 "settingController_3": "Language deletion completed."
-"settingController_4": "Language not deleted!"
-"settingController_5": "Language creation completed."
-"settingController_6": "Language not created!"
+"settingController_4": "Language creation completed."
+"settingController_5": "Language not created!"
 
 # UserController.php
 "userController_1": "User creation completed."
@@ -281,7 +280,7 @@ date.time: H:i:s
 "registration_10": "Gender"
 "registration_11": "Fiscal code"
 "registration_12": "Company name"
-"registration_13": "Company code"
+"registration_13": "Vat"
 "registration_14": "Website"
 "registration_15": "State"
 "registration_16": "City"
@@ -430,7 +429,7 @@ date.time: H:i:s
 "profile_9": "Gender"
 "profile_10": "Fiscal code"
 "profile_11:": "Company name"
-"profile_12": "Company code"
+"profile_12": "Vat"
 "profile_13": "Website"
 "profile_14": "State"
 "profile_15": "City"
@@ -508,7 +507,7 @@ date.time: H:i:s
 "user_creation_9": "Gender"
 "user_creation_10": "Fiscal code"
 "user_creation_11": "Company name"
-"user_creation_12": "Company code"
+"user_creation_12": "Vat"
 "user_creation_13": "Website"
 "user_creation_14": "State"
 "user_creation_15": "City"
@@ -533,7 +532,7 @@ date.time: H:i:s
 "user_profile_9": "Gender"
 "user_profile_10": "Fiscal code"
 "user_profile_11": "Company name"
-"user_profile_12": "Company code"
+"user_profile_12": "Vat"
 "user_profile_13": "Website"
 "user_profile_14": "State"
 "user_profile_15": "City"
