Code - Work in progress

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -41,11 +41,12 @@ date.time: H:i:s
 "class_utility_5": "Select parent:"
 
 # Upload.php
-"class_upload_1": "Error chunk size."
-"class_upload_2": "Error max size."
-"class_upload_3": "File uploaded successfully."
-"class_upload_4": "Unable to move file to "
-"class_upload_5": "Upload aborted."
+"class_upload_1": "Error max size."
+"class_upload_2": "Error chunk size."
+"class_upload_3": "Error only this extensions are allowed: "
+"class_upload_4": "File uploaded successfully."
+"class_upload_5": "Unable to move file to "
+"class_upload_6": "Upload aborted."
 
 # ---
 # Controller / Control panel
@@ -256,27 +257,26 @@ date.time: H:i:s
 "index_4": "Ok"
 "index_5": "Abort"
 "index_6": "Connection error, please reload the page."
-"index_7": "There is a background process that has not completed. Reloading might result in data loss."
-"index_8": "After this change, for secure reason, you must login again."
-"index_9": "Change page language without save data?"
-"index_10": "Really delete this payment?"
-"index_11": "Really delete all payments?"
-"index_12": "Really delete this page?"
-"index_13": "Really delete all pages?"
-"index_14": "Really delete this user?"
-"index_15": "Really delete all users?"
-"index_16": "Really delete this module?"
-"index_17": "Really delete all modules?"
-"index_18": "Really delete this role?"
-"index_19": "Really delete all roles?"
-"index_20": "Really delete this language?"
-"index_21": "Paused..."
-"index_22": "Uploading..."
-"index_23": " seconds remaining."
-"index_24": "The file you have chosen is too large."
-"index_25": "Start"
-"index_26": "Pause"
-"index_27": "Resume"
+"index_7": "After this change, for secure reason, you must login again."
+"index_8": "Change page language without save data?"
+"index_9": "Really delete this payment?"
+"index_10": "Really delete all payments?"
+"index_11": "Really delete this page?"
+"index_12": "Really delete all pages?"
+"index_13": "Really delete this user?"
+"index_14": "Really delete all users?"
+"index_15": "Really delete this module?"
+"index_16": "Really delete all modules?"
+"index_17": "Really delete this role?"
+"index_18": "Really delete all roles?"
+"index_19": "Really delete this language?"
+"index_20": "Paused..."
+"index_21": "Uploading..."
+"index_22": " seconds remaining."
+"index_23": "The file you have chosen is too large."
+"index_24": "Start"
+"index_25": "Pause"
+"index_26": "Resume"
 
 # recover_password.html.twig
 "recover_password_1": "Recover password form"
